--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection":"Server=abdbtest.postgres.database.azure.com;Database=abdbtest;Port=5432;User Id=slava@abdbtest;Password=qweasdzxcO1$;Ssl Mode=Require;"
+    "DefaultConnection":"Server=absqltask.postgres.database.azure.com;Database=absqltask;Port=5432;User Id=slava@absqltask;Password=qweasdzxcO1$;Ssl Mode=Require;"
   },
   "Logging": {
     "LogLevel": {
