--- a/ABapi.csproj
+++ b/ABapi.csproj
@@ -7,6 +7,7 @@
    </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.5" />
     <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.4" />
